font fixed and text fixed and realigned

--- a/src/pages/home/home.page.scss
+++ b/src/pages/home/home.page.scss
@@ -85,7 +85,7 @@
         }
 
         h5 {
-          font-size: 40px;
+          font-size: 24px;
           font-weight: normal;
           line-height: 1.06;
           color: #434a5b;
@@ -190,7 +190,7 @@
         }
 
         h5 {
-          font-size: 20px;
+          font-size: 12px;
           font-weight: normal;
           line-height: 1.06;
           color: #434a5b;
